[package]
name = "synacor-vm"
version = "0.1.0"
authors = ["Derrick W. Turk <dwt@terminusdatascience.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "synacor_vm"
path = "src/lib.rs"

[[bin]]
name = "synvm"
path = "src/bin/vm.rs"

[[bin]]
name = "syndis"
path = "src/bin/disas.rs"

[[bin]]
name = "syntrace"
path = "src/bin/tracevm.rs"

[dependencies]
signal-hook = "0.3.1"
structopt = "0.3"

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3.9"
features = ["handleapi", "processenv", "consoleapi"]
